@@ -311,11 +311,12 @@ public class ResolveTest extends TestCase {
                 .exists());
     }
 
-    public void testResolveRequiresIvyFile() throws Exception {
+    public void testResolveRequiresDescriptor() throws Exception {
         // mod1.1 depends on mod1.2, mod1.2 has no ivy file
         Ivy ivy = new Ivy();
         ivy.configure(new File("test/repositories/ivysettings.xml"));
-        ((FileSystemResolver) ivy.getSettings().getResolver("1")).setAllownomd(false);
+        ((FileSystemResolver) ivy.getSettings().getResolver("1"))
+            .setDescriptor(FileSystemResolver.DESCRIPTOR_REQUIRED);
         ResolveReport report = ivy.resolve(new File(
                 "test/repositories/1/org1/mod1.1/ivys/ivy-1.0.xml").toURL(),
             getResolveOptions(new String[] {"*"}));
